Convert build system to automake/autoconf/libtool.
TODO: convert kats/test.sh to work with this.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,31 @@ libargon2.dylib
 .DS_Store
 src/*.o
 src/blake2/*.o
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.h
+config.h.in
+config.h.in~
+config.log
+config.status
+configure
+kats/Makefile
+kats/Makefile.in
+libtool
+m4/
+src/.deps/
+src/.libs/
+src/Makefile
+src/Makefile.in
+src/*.lo
+src/bench
+src/blake2/.deps/
+src/blake2/.dirstamp
+src/blake2/.libs/
+src/blake2/*.lo
+src/genkat
+src/libargon2.la
+stamp-h1
+support/
