Use AX_PTHREAD for detecting and using pthreads correctly.

--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,9 @@ AM_INIT_AUTOMAKE
 #AM_SILENT_RULES([yes])
 AC_PROG_LIBTOOL
 
+#AX_CFLAGS_FORCE_C89
+AX_PTHREAD
+
 # create all Makefiles (e.g., for 'make dist')
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([src/Makefile])
